# SciPDFReader

./: CMakeLists.txt
include/: PDFManager.h  mainwindow.h
resources/: resource.qrc
src/: PDFManager.cpp  main.cpp  mainwindow.cpp
